@@ -1,3 +1,7 @@
+2006-07-24  Matthias Wimmer  <m@tthias.eu>
+
+    * jsm/deliver.c: update in handling of new sc protocol
+
 2006-07-08  Matthias Wimmer  <m@tthias.eu>
 
     * jabberd/lib/jid.c: introducing jid_user_pool() function
